# knowledge-base

./: .dockerignore  .gitignore  AGENTS.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
compose/: arangodb.compose.yml
config/: arangodb.env.example  pipeline.example.toml
docs/: architecture.md  audit-followup-plan.md  graphrag-plan.md  implementation-audit-plan.md  roadmap.md  visualization-plan.md  visualization.md  viz-smoke-checklist.md
docs/adr/: 0001-adopt-docs-only-adr-process.md  0002-adopt-github-spec-kit-for-spec-driven-development.md  0003-adopt-arangodb-centered-production-pipeline.md  0004-local-read-only-mcp-server-for-knowledge-base.md  0005-define-source-provenance-and-private-archive-boundaries.md  0006-define-the-local-security-and-privacy-trust-boundary.md  0007-adopt-rebuildable-embeddings-and-extractive-graphrag.md  0008-adopt-offline-visualization-and-graph-export.md  0009-scope-spec-kit-and-plan-tracker-workflows.md  0010-adopt-provenance-gated-writer-research-file-workflow.md  0011-clarify-mcp-vs-research-cli-boundary-and-processed-ssot-in-arangodb.md  README.md  template.md
scripts/: check-adr.mjs  check-markdown-links.mjs  check-viz-template.mjs  create-adr.mjs  generate-adr-index.mjs
scripts/lib/: adr.mjs
specs/001-production-knowledge-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tellmeabout-tech-source/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-book-cube-telegram-source/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/004-book-cube-owner-archive-import/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/005-medium-export-source/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/006-knowledge-base-mcp-server/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/007-writer-research-workflow/: acceptance.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/knowledge_base/: __init__.py  arango.py  chunking.py  config.py  constants.py  embeddings.py  exporting.py  fixture.py  freshness.py  graph_export.py  graphrag_search.py  ids.py  indexing.py  json_output.py  language.py  mcp_server.py  mcp_service.py  net.py  platform.py  repository.py  research_artifact_io.py  research_artifacts.py  research_retrieval.py  research_workflow.py  retrieval.py  schema.py  visualizing.py  viz_builder.py  viz_layouts.py  writing_handoff.py
tests/: conftest.py
tests/fixtures/: book_cube_channel.html  book_cube_export.json  safe_knowledge_fixture.json  tellmeabout_tech_feed.xml
tests/integration/: conftest.py  test_arangodb_pipeline.py  test_book_cube_archive_pipeline.py  test_book_cube_pipeline.py  test_mcp_service_pipeline.py  test_medium_export_pipeline.py  test_research_workflow_pipeline.py  test_tellmeabout_tech_pipeline.py  test_visualization_pipeline.py
tests/unit/: test_arango.py  test_book_cube_archive.py  test_book_cube_source.py  test_chunking.py  test_cli.py  test_communities.py  test_config.py  test_embeddings.py  test_exporting.py  test_fixture_contract.py  test_freshness.py  test_graph_export.py  test_ids.py  (+18 more)
(+37 files in other folders)
