[project]
name = "knowledge-base"
version = "0.1.0"
description = "Personal knowledge-base pipeline with ArangoDB-centered retrieval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.14",
]

[project.scripts]
kb = "knowledge_base.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_base"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require a running ArangoDB service",
]

[tool.ruff]
# 130 keeps embedded AQL query strings and descriptive schema/index literals on single lines.
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "RUF"]
# Ambiguous-unicode rules fire on intentional Cyrillic content (Russian is a first-class language here).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.coverage.run]
source = ["knowledge_base"]
branch = true
